plugins {
	id 'java'
//	id "org.sonarqube" version "4.4.1.3373"
	id "org.sonarqube" version "5.0.0.4638"
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'jacoco'
}

group = 'com.mju'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2022.0.4")
}

jar {
	enabled = false
}

jacoco {
	toolVersion = "0.8.11"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.leopard.boot:leopard-boot-requestmapping:0.9.20'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.31'

	runtimeOnly 'com.h2database:h2'

	// Swagger 3
//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
	testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.1.0'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Jasypt: DB 암호화
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'javax.xml.bind:jaxb-api:2.3.0'

	// SonarQube
	implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'

	// test container
	testImplementation "org.testcontainers:junit-jupiter:1.17.2"
	testImplementation "org.testcontainers:mysql:1.17.2"

	//wire mock
	testImplementation("org.springframework.cloud:spring-cloud-contract-wiremock")

	//aws s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
}

sonarqube {
	properties {
		property "sonar.projectKey", "sonar-management"
		property "sonar.projectName", "sonar-management"
//		property "sonar.sources", "src" // 소스 경로
//		property "sonar.language", "java" // 언어
//		property "sonar.java.source", "17"
//		property "sonar.sourceEncoding", "UTF-8"
//		property "sonar.profile", "Sonar way" // SonarQube 에서 분석할 때 적용할 프로필(분석할 수준 설정)
//		property "sonar.java.binaries", "${buildDir}/classes" // 자바 클래스 파일위치
//		property "sonar.test.inclusions", "**/*Test.java" // 코드 분석에 사용할 테스트 소스
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		html.required = true
		xml.required = true
	}
}
